change github link and modify nav.html

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ analytics-id:       "default"
 twitter:            
 facebook:           
 instagram:          
-github:             https://github.com/jwillisch
+github:           jwillisch
 
 # personal
 location:           Berlin, Germany
