--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email: jakob@googlemail.com
     phone: 
-    website: jwillisch@github.io #do not add http://
+    website: jwillisch.github.io #do not add http://
     linkedin: jakobwillisch
     github: jwillisch
     gitlab:
