--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
     # Profile information
     name: Jakob Willisch
     tagline: Quantitative Social Science Researcher
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: jakob@googlemail.com
@@ -19,7 +19,7 @@ sidebar:
     github: jwillisch
     gitlab:
     bitbucket:
-    twitter: ´
+    twitter: 
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
@@ -42,7 +42,7 @@ sidebar:
         link:
 
 career-profile:
-    title: Quantitative Social Science Researcher
+    title: Career Profile
     summary: |
       I am a researcher interested in data-driven answers and solution to societal, especially political problems. 
       I hold a doctoral degree in Political Science in which I focused on the political economy of authoritarian politics. 
@@ -89,7 +89,7 @@ experiences:
       time: Nov. 2011 - Feb. 2012
       company: 4G Wines Ltd., Cape Town
       details: |
-        I 
+        In this startup wine company, I assisted the CEO in operations, market research and sales
 
 projects:
     title: Projects
