fixed cv background and stylesheet

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -69,6 +69,13 @@ education:
         I studied how economic and political actors and institutions affect the policy-making process. My thesis analysed the
         effects of state-owned investment funds on fiscal policy-making.
 
+    - degree: BA in Philosophy &amp; Economics
+      university: University of Bayreuth
+      time: 2009 - 2013
+      details: |
+        I studied how economic and political actors and institutions affect the policy-making process. My thesis analysed the
+        effects of state-owned investment funds on fiscal policy-making.
+
 experiences:
     - role: Research Associate
       time: 2015 - Present
